--- a/ABIMSIM/UpgradesView.xib
+++ b/ABIMSIM/UpgradesView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,9 +11,6 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background_7.png" translatesAutoresizingMaskIntoConstraints="NO" id="FdE-VK-S8r">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="ROn-Yt-dQR">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -43,8 +40,8 @@
                         <action selector="backButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="Ze0-ux-vS5"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UPGRADES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBS-Wd-5Hp">
-                    <rect key="frame" x="111.5" y="18" width="97.5" height="35"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="UPGRADES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBS-Wd-5Hp">
+                    <rect key="frame" x="112" y="18" width="98" height="35"/>
                     <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="29"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -52,20 +49,16 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="FdE-VK-S8r" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="0lb-Oi-VEB"/>
                 <constraint firstItem="qBS-Wd-5Hp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="2dB-ul-pBX"/>
                 <constraint firstItem="dHm-rb-9KP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5F1-C2-aoo"/>
                 <constraint firstItem="dHm-rb-9KP" firstAttribute="centerY" secondItem="eVw-28-GZV" secondAttribute="centerY" id="A0S-ls-lhU"/>
                 <constraint firstAttribute="centerX" secondItem="qBS-Wd-5Hp" secondAttribute="centerX" id="DOe-tH-Oc8"/>
                 <constraint firstAttribute="trailing" secondItem="ROn-Yt-dQR" secondAttribute="trailing" id="H6f-6K-CZn"/>
-                <constraint firstAttribute="trailing" secondItem="FdE-VK-S8r" secondAttribute="trailing" id="QOB-Za-Afn"/>
                 <constraint firstItem="dHm-rb-9KP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SVV-ZT-NQf"/>
                 <constraint firstAttribute="bottom" secondItem="ROn-Yt-dQR" secondAttribute="bottom" id="TtU-yn-nBC"/>
                 <constraint firstItem="ROn-Yt-dQR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="VSR-u0-9FZ"/>
-                <constraint firstItem="FdE-VK-S8r" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ytu-qg-EvG"/>
                 <constraint firstAttribute="trailing" secondItem="dHm-rb-9KP" secondAttribute="trailing" id="eFj-G8-VRM"/>
                 <constraint firstItem="ROn-Yt-dQR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="huQ-8g-Rre"/>
-                <constraint firstAttribute="bottom" secondItem="FdE-VK-S8r" secondAttribute="bottom" id="oMd-1W-vVS"/>
                 <constraint firstItem="eVw-28-GZV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="san-GG-qD7"/>
             </constraints>
             <connections>
@@ -75,12 +68,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Background_7.png" width="320" height="568"/>
         <image name="UpgradesChevron" width="15" height="23"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
